--- a/index.css
+++ b/index.css
@@ -1,13 +1,13 @@
 :root {
-    --primary-color: #008000
+  --primary-color: #008000;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #main-header {
-    background-color: var(--primary-color);    
+  background-color: var(--primary-color);
 }
